<resources>
    <string name="app_name">PianoMentor</string>
    <string name="user_icon">user_icon</string>
    <string name="previous_button_viewpager">Предыдущее</string>
    <string name="next_button_viewpager">Следующее</string>
    <string name="pianomentor">PianoMentor</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="page_counter">Страница %1$d из %2$d</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_old_password">Старый пароль</string>
    <string name="prompt_new_password">Новый пароль</string>
    <string name="prompt_repeat_new_password">Повторите новый пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="action_sign_up">Зарегистрироваться</string>
    <string name="action_change_password">Сменить пароль</string>
    <string name="welcome">Вы вошли в учётную запись</string>
    <string name="invalid_email">Не правильно указан Email</string>
    <string name="password_too_short">%1$s должен содержать не менее 6 символов</string>
    <string name="password_no_lowercase">%1$s должен содержать хотя бы одну строчную букву</string>
    <string name="password_no_uppercase">%1$s должен содержать хотя бы одну заглавную букву</string>
    <string name="password_no_digit">%1$s должен содержать хотя бы одну цифру</string>
    <string name="login_failed">Вход не был выполнен</string>
    <string name="prompt_nickname">Никнейм</string>
    <string name="prompt_confirm_password">Повторите пароль</string>
    <string name="prompt_nickname_only_letters_numbers">Никнейм должен содержать только буквы и цифры</string>
    <string name="prompt_email_not_regex">Email не совпадает с шаблоном email</string>
    <string name="prompt_password_not_match">Пароли не совпадают</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="change_profile_photo">Изменить фотографию</string>
    <string name="about_app">О приложении</string>
    <string name="logout">Выйти из учетной записи</string>
    <string name="logout_title_dialog">Выход из учётной записи</string>
    <string name="are_you_sure_logout_dialog">Хотите ли вы выйти из аккаунта?</string>
    <string name="yes_word">Да</string>
    <string name="no_word">Нет</string>
    <string name="you_havent_been_already_logged_in">Вы ещё не вошли в аккаунт</string>
    <string name="you_have_been_logged_out">Вы вышли из учётной записи</string>
    <string name="app_version_text"><u>Версия приложения:</u> 1.0.0</string>
    <string name="app_creator_text"><u>Создатель приложения:</u>\nСеряков Егор Сергеевич\nСтудент ЮУрГУ\nкафедры Системного программирования\nГруппы КЭ-402</string>
    <string name="diploma_text">Это приложение является дипломной работой бакалавра.</string>
    <string name="about_app_title_text">О приложении</string>
    <string name="fade_animation">Анимация наплывом</string>
    <string name="swipe_animation">Анимация переходом</string>
    <string name="no_animation">Без анимации</string>
    <string name="login_for_statistics">Для отображения и сохранения статистики необходимо войти в аккаунт</string>
    <string name="tests_done">Выполнено тестов</string>
    <string name="zero_tests_done">Вы прошли 0 тестов по теории, самое время, чтобы начать</string>
    <string name="courses_done">Завершено курсов</string>
    <string name="zero_courses_done">Вы завершили 0 курсов, начните с курса \"Введение\", чтобы освоить азы</string>
    <string name="exercise">Упражнение</string>
    <string name="lectures">Лекции</string>
    <string name="introduction_course">Курс \"Введение\"</string>
    <string name="end_test">Завершить тест</string>
    <string name="back_to_course_fragment">Выйти на экран курса</string>
    <string name="back_to_statistics_fragment">Выйти на главный экран</string>
    <string name="question_counter">Вопрос %1$d из %2$d</string>
    <string name="question_title">Вопрос %1$d</string>
    <string name="quiz_result_success">Вы успешно сдали тест!</string>
    <string name="quiz_result_fail">Увы, но вы совершили ошибки в тесте</string>
    <string name="correct_answers">Правильных ответов: %1$d</string>
    <string name="total_questions">Всего вопросов: %1$d</string>
    <string name="total_exercises">Всего заданий: %1$d</string>
    <string name="percent_completed">Процент выполнения: %.2f</string>
    <string name="percent">%d%%</string>
    <string name="restart_quiz_or_show_results">Хотите ли вы перепройти тест или же просмотреть прошлые результаты теста?</string>
    <string name="quiz_failed">Тест не сдан</string>
    <string name="restart_quiz">Перепройти тест</string>
    <string name="show_results">Показать результаты</string>
    <string name="task_title">Задание</string>
    <string name="CounterOctave">Контроктава</string>
    <string name="BigOctave">Большая октава</string>
    <string name="SmallOctave">Малая октава</string>
    <string name="FirstOctave">Первая октава</string>
    <string name="SecondOctave">Вторая октава</string>
    <string name="ThirdOctave">Третья октава</string>
    <string name="FourthOctave">Четвёртая октава</string>
    <string name="repeat_btn">Повторить</string>
    <string name="exercise_counter">"%d/10"</string>
    <string name="skip_btn">Пропустить</string>
    <string name="start_exercise">Начать упражнение</string>
    <string name="correct">Верно</string>
    <string name="incorrect">Неверно</string>
    <string name="go_next_interval">Далее</string>
    <string name="change_password">Изменить пароль</string>
    <string name="error_loading_image">Не получилось загрузить фото</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="changed_password_success">Вы успешно изменили пароль</string>
    <string name="exercise_result_success">Вы успешно завершили практическое задание</string>
    <string name="exercise_result_fail">Увы, но вы провалили практическое задание</string>
    <string name="end_exercise">Готово</string>
</resources>