<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/about_app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="enterAlways"
        app:layout_collapseMode="pin"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:navigationIconTint="@color/dark_gray"
        android:background="@android:color/transparent" />

    <TextView
        android:id="@+id/about_app_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="40sp"
        android:gravity="center_vertical"
        android:paddingStart="16dp"
        android:textColor="@color/dark_gray"
        tools:text="О приложении"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/about_app_linear_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@drawable/profile_background"
        android:elevation="20dp"
        android:translationZ="-20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            android:paddingHorizontal="16dp"
            android:textSize="22sp"
            tools:text="@string/app_version_text"/>

        <TextView
            android:id="@+id/app_creator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            android:paddingHorizontal="16dp"
            android:textSize="22sp"
            tools:text="@string/app_creator_text"/>

        <TextView
            android:id="@+id/app_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="30dp"
            android:paddingHorizontal="16dp"
            android:textSize="22sp"
            tools:text="@string/diploma_text"/>


    </LinearLayout>

</LinearLayout>