<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/first_purple"
    tools:context="teachingsolutions.presentation_layer.fragments.login_registration.login.LoginFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="enterAlways"
        app:layout_collapseMode="pin"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_texts_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="120dp"
        android:layout_marginHorizontal="16dp">

        <EditText
            android:id="@+id/register_nickname_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_nickname"
            android:hint="@string/prompt_nickname"
            android:textColorHint="@color/ultra_light_purple"
            android:backgroundTint="@color/ultra_light_purple"
            android:textColor="@color/ultra_light_purple"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/register_email_edit_text"/>

        <EditText
            android:id="@+id/register_email_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:textColorHint="@color/ultra_light_purple"
            android:backgroundTint="@color/ultra_light_purple"
            android:textColor="@color/ultra_light_purple"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_nickname_edit_text"
            app:layout_constraintBottom_toTopOf="@+id/register_password_edit_text"/>

        <EditText
            android:id="@+id/register_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:textColorHint="@color/ultra_light_purple"
            android:backgroundTint="@color/ultra_light_purple"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_email_edit_text"
            app:layout_constraintBottom_toTopOf="@+id/register_confirmPassword_edit_text"/>

        <EditText
            android:id="@+id/register_confirmPassword_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_confirm_password"
            android:hint="@string/prompt_confirm_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:textColorHint="@color/ultra_light_purple"
            android:backgroundTint="@color/ultra_light_purple"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_password_edit_text"
            app:layout_constraintBottom_toTopOf="@+id/register_button"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:enabled="false"
            android:text="@string/action_sign_up"
            android:backgroundTint="@color/light_brown"
            android:textColorHint="@color/dark_gray"
            android:textColor="@color/dark_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_confirmPassword_edit_text"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/register_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        android:backgroundTint="@color/first_brown"
        android:progressTint="@color/first_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_texts_container"
        app:layout_constraintStart_toStartOf="@+id/edit_texts_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>