<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/change_password_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/first_purple">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/change_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_scrollFlags="enterAlways"
        app:layout_collapseMode="pin"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/password_change_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="160dp"
        android:layout_marginHorizontal="16dp">

        <EditText
            android:id="@+id/old_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_old_password"
            android:hint="@string/prompt_old_password"
            android:textColorHint="@color/ultra_light_purple"
            android:backgroundTint="@color/ultra_light_purple"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColor="@color/ultra_light_purple"
            android:textCursorDrawable="@null"
            android:drawableEnd="@drawable/icon_eye_closed"
            android:drawableTint="@color/ultra_light_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/new_password_edit_text"/>


        <EditText
            android:id="@+id/new_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_new_password"
            android:hint="@string/prompt_new_password"
            android:imeOptions="actionDone"
            android:textColorHint="@color/ultra_light_purple"
            android:backgroundTint="@color/ultra_light_purple"
            android:textColor="@color/ultra_light_purple"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/old_password_edit_text"
            app:layout_constraintBottom_toTopOf="@+id/repeat_new_password_edit_text"/>

        <EditText
            android:id="@+id/repeat_new_password_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_repeat_new_password"
            android:hint="@string/prompt_repeat_new_password"
            android:imeOptions="actionDone"
            android:textColorHint="@color/ultra_light_purple"
            android:backgroundTint="@color/ultra_light_purple"
            android:textColor="@color/ultra_light_purple"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_password_edit_text"
            app:layout_constraintBottom_toTopOf="@+id/change_password_button"/>

        <TextView
            android:id="@+id/changePasswordError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/deep_coral"
            tools:visibility="visible"
            android:visibility="gone"
            tools:text="Неверный пароль\nНужно больше символов"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeat_new_password_edit_text"
            app:layout_constraintEnd_toEndOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/change_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="50dp"
            android:enabled="false"
            android:text="@string/action_change_password"
            android:backgroundTint="@color/light_green"
            android:textColorHint="@color/dark_gray"
            android:textColor="@color/dark_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordError"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/change_password_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        android:backgroundTint="@color/first_green"
        android:progressTint="@color/first_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password_change_container"
        app:layout_constraintStart_toStartOf="@+id/password_change_container"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>